IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8/2/13: In eTomo handling messages starting with "LOGFILE:".  The message
following this tag will be treated as a local file name, the contents of which
will be placed in the project log.(Bug# 1700)

8/2/13: Added an option for the PEET Help pages to the eTomo menus.
(Bug# 1650)

7/31/13: Clip multiply/divide can have a stack as first file and a single
image as the second file.

7/31/13: Changes to Batchruntomo: option to send emails, more informative
output about what is running, a log file with a copy of program output saved
in each dataset, delivery of more files to dataset directory, running clip
stat on a fixed stack.

7/31/13: Fix a bug in Beadtrack that zeroed out the sobel sum when reversing
direction.

7/31/13: In eTomo - Template Editor, improved the labels and fields.
(Bug# 1724)

7/31/13: Made default maximum radius for X-ray erasing a little bigger for
bead diameter >= 10; turned on local tracking by default.

7/31/13: Made Makecomfile able to make xcorr_pt.com before .preali exists.

7/24/13: Added option to Archiveorig to restore multiple levels of archives.

7/24/13: Fixed 3dmod crash when etomo tells it to load an empty X-ray model.

7/22/13: Made all python scripts properly put IMOD on front of path in
Cygwin.

7/22/13: Fixed etomo script so it can run java.exe in Windows/System32
directory (In 4.5).

7/18/13: IMOD_4-6-25
7/17/13: Made Imodfindbeads able to analyze for bead diameter in averaged bead
and adjust parameters for a significantly different size (good only for cryo).
Autofidseed has an option to apply this and use the new size for tracking;
Batchruntomo will use the new size for tracking too.

7/17/13: Made processchunks set a thread limit of 1 by default unless running
a single com file or running with GPU option, with a new option to set the
limit higher.

7/16/13: FFTs: Switched to FFTW for Fourier transforms in most distributions,